--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="jQueryRotate.2.2.js"></script>        
     <script type="text/javascript"src="CompassRoss.js"></script>
     <script>
-      var ipAddr = "10.0.0.2";
+      var ipAddr = "<%= tagline %>";
     
       // http://192.168.254.1:8090/?action=stream
       var rAF = window.mozRequestAnimationFrame ||
