--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="jQueryRotate.2.2.js"></script>        
     <script type="text/javascript"src="CompassRoss.js"></script>
     <script>
-      var ipAddr = location.host.split(':')[0];
+      var ipAddr = location.host;
     
       // http://192.168.254.1:8090/?action=stream
       var rAF = window.mozRequestAnimationFrame ||
@@ -69,7 +69,11 @@
       }
       
       function cam() {
-        ipAddr = location.host.split(':')[0];
+        setTimeout(function() {
+          rAF(cam);
+        },30000);
+        
+        ipAddr = location.host;
         
         $('#Cam1').attr('src', "http://" + ipAddr + ":8080/?action=stream");
         $('#Cam2').attr('src', "http://" + ipAddr + ":8081/?action=stream");
